Prevent vertical scrollbar from unnecessarily appearing.

The existing code for views::ScrollView and views::TableView contains a
layout-dependency cycle.
  * The size of the TableView depends on whether scrollbars are present.
  * Whether scrollbars are present is dependent on the size of the TableView.

This causes the following problem:
The TableView sets its height to ScrollView::content_viewport_'s height. But the
TableView's width is wider than the viewport's width. This causes the ScrollView
to add a horizontal scrollbar. But now horizontal scrollbar + content's height >
viewport's height, so a vertical scrollbar is also necessary.

A full fix to this problem would require a large refactor to avoid
layout-dependency cycles. Instead, I will extend an existing workaround. Prior
to invoking layout for the TableView, the contents_viewport_ will be
artificially shrunk to make space for both a vertical and horizontal scrollbar.
Previously, it was only shrunk to make space for a vertical scrollbar. This way,
if the contents chooses to take up the full height, there's enough space for a
horizontal scrollbar to appear without causing a vertical scrollbar to appear.

Bug: 771502
Change-Id: Ib97ddd8f5619d16342ee85e7ad280c049a1566e5
Reviewed-on: https://chromium-review.googlesource.com/719380
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509312}
Former-commit-id: 4e94f6984be1fe602353192d74a1e41d133e7cc2